--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <head>
-  <title>website test</title>
+  <title>Super Cool Website</title>
 </head>
 <body>
-  <h1>This is a test</h1>
+  <h1 style="text-align: center;>This is a test</h1>
   <p1>testing test</p1>
   
 </body>
