--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Super Cool Website</title>
 </head>
 <body>
-  <h1 style="text-align: center;>This is a test</h1>
+  <h1 style=text-align: center;>This is a test</h1>
   <p1>testing test</p1>
   
 </body>
