--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 <body>
   <h1 style=text-align: center;>This is a test</h1>
-  <p1>testing test</p1>
-  <p2> does this work I hope it does pretty cool</p2>
+  <p1>testing test does this work it better or else Im gonna do something horrible you shall see mwahaahahahahaahahahahahahahaha</p1>
   
 </body>
